LOG of the CHANGES in the package GenomicTools.fileHandler

-----------------------------------------------------

Version with odd last numbers are development versions.
Stable releases have even version numbers:

-----------------------------------------------------
Version 0.1.5.x:
1: importFA does not rely on alternating rows anymore
2: importSTARLog imports now more statistics and is able to import recursively several log files
3: plot.totalReads function added
4: summary.STARLog function added

Version 0.1.4 (Stable Version):
* Improvements of summary functions
* Minor bugfixes

Version 0.1.2 (Stable Version):
* Initial commit with most import I/O functions added
Planned next features
* importVCF should also support gz files located on a remote server, so far only local support (importVCF)

Version 0.1.1 (Developer Version):
* Initial package development