@@ -1,6 +1,5 @@
 # Generated by roxygen2: do not edit by hand
 
-S3method(plot,totalReads)
 S3method(print,bed)
 S3method(print,fa)
 S3method(print,featureCounts)
@@ -27,6 +26,8 @@ export(importPED)
 export(importSTARLog)
 export(importVCF)
 export(importXML)
+export(plotTotalReads)
+export(plotUniquelyMappedReads)
 import(data.table)
 importFrom(snpStats,switch.alleles)
 importFrom(stats,median)
