@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/plot.totalReads.R
-\name{plot.totalReads}
-\alias{plot.totalReads}
-\title{plot.totalReads}
+% Please edit documentation in R/plotTotalReads.R
+\name{plotTotalReads}
+\alias{plotTotalReads}
+\title{plotTotalReads}
 \usage{
-\method{plot}{totalReads}(STARLog)
+plotTotalReads(STARLog)
 }
 \arguments{
 \item{STARLog}{A STARLog object}
