@@ -9,8 +9,9 @@ Stable releases have even version numbers:
 Version 0.1.5.x:
 1: importFA does not rely on alternating rows anymore
 2: importSTARLog imports now more statistics and is able to import recursively several log files
-3: plot.totalReads function added
+3: plotTotalReads function added
 4: summary.STARLog function added
+5: plotUniquelyReads function added and also added to the summary function
 
 Version 0.1.4 (Stable Version):
 * Improvements of summary functions
